Fixed svg overlap with version number

--- a/app/styles/ui/dialogs/_release-notes.scss
+++ b/app/styles/ui/dialogs/_release-notes.scss
@@ -3,7 +3,7 @@
 #release-notes {
   max-height: 500px;
   max-width: 800px;
-  min-width: 500px;
+  min-width: 550px;
 
   .dialog-content {
     // we'll own the layout inside here
